@@ -636,7 +636,9 @@ let catch_tests = suite "catch" [
     p4
   end;
 
+
   test "catch with ocaml-runtime exception" begin fun () ->
+    Lwt.set_exception_filter Lwt.catch_not_runtime_filter;
     try
       Lwt.catch
         (fun () -> raise Out_of_memory)
@@ -646,6 +648,7 @@ let catch_tests = suite "catch" [
   end;
 
   test "try_bind with ocaml-runtime exception" begin fun () ->
+    Lwt.set_exception_filter Lwt.catch_not_runtime_filter;
     try
       Lwt.try_bind
         (fun () -> raise Out_of_memory)
@@ -656,6 +659,7 @@ let catch_tests = suite "catch" [
   end;
 
   test "try_bind(2) with ocaml-runtime exception" begin fun () ->
+    Lwt.set_exception_filter Lwt.catch_not_runtime_filter;
     try
       let _ =
         Lwt.try_bind
